--- a/amazon_clone/amazon.html
+++ b/amazon_clone/amazon.html
@@ -63,19 +63,19 @@
                 <p id="p10"> Shop deals in Fashion</p><br><br>
                 <div  id="ima1">
                     <div id="im11">
-                        <img id="im111" src="im1.jpg">
+                        <img id="im111" src="images/im1.jpg">
                         <p id="text1" > Jeans under $50</p>
                     </div>
                     <div id="im12">
-                        <img id="im121" src="im2.jpg" >
+                        <img id="im121" src="images/im2.jpg" >
                         <p id="text1" > Tops under $25</p>
                     </div>
                     <div id="im13">
-                        <img id="im131" src="im3.jpg">
+                        <img id="im131" src="images/im3.jpg">
                         <p id="text1" > Dresses under $30</p>
                     </div>
                     <div id="im14">
-                        <img id="im141" src="im4.jpg">
+                        <img id="im141" src="images/im4.jpg">
                         <p id="text1" > Shoes under $50</p>
                     </div><br>
                     <p id="text2"> See all deals</p>
@@ -85,19 +85,19 @@
                 <p id="p11"> Refresh your space</p><br><br>
                 <div  id="ima2">
                     <div id="im21">
-                        <img id="im211" src="im5.jpg">
+                        <img id="im211" src="images/im5.jpg">
                         <p id="text1" > Dining</p>
                     </div>
                     <div id="im22">
-                        <img id="im221" src="im6.jpg" >
+                        <img id="im221" src="images/im6.jpg" >
                         <p id="text1" > Home</p>
                     </div>
                     <div id="im23">
-                        <img id="im231" src="im7.jpg">
+                        <img id="im231" src="images/im7.jpg">
                         <p id="text1" > Kitchen</p>
                     </div>
                     <div id="im24">
-                        <img id="im241" src="im8.jpg">
+                        <img id="im241" src="images/im8.jpg">
                         <p id="text1" > Health and Beauty</p>
                     </div><br>
                     <p id="text3"> See more</p>
@@ -106,14 +106,14 @@
             <div id="im3">
                 <p id="p12"> Deals in PCs</p><br><br>
                 <div  id="ima3">
-                    <img id="im311" src="im9.jpg">
+                    <img id="im311" src="images/im9.jpg">
                     <p id="text4"> Shop now</p>
                 </div>
             </div>
             <div id="im4">
                 <p id="p13"> Toys under $25</p><br><br>
                 <div  id="ima4">
-                    <img id="im411" src="im10.jpg">
+                    <img id="im411" src="images/im10.jpg">
                     <p id="text5"> Shop now</p>
                 </div>
             </div>
@@ -123,13 +123,15 @@
     <div id="image2">
         <p id="text6">Best Sellers in Home & Kitchen</p>
         <div id="image3">
-            <div id="image31"><img src="im11.jpg"></div>
-            <div id="image32"><img src="im12.jpg"></div>
-            <div id="image33"><img src="im13.jpg"></div>
-            <div id="image34"><img src="im14.jpg"></div>
-            <div id="image35"><img src="im15.jpg"></div>
-            <div id="image37"><img src="im17.jpg"></div>
-            <div id="image36"><img src="im16.jpg"></div>
+            <div id="image31"><img src="images/im11.jpg"></div>
+            <div id="image32"><img src="images/im12.jpg"></div>
+            <div id="image33"><img src="images/im13.jpg"></div>
+            <div id="image34"><img src="images/im14.jpg"></div>
+            <div id="image35"><img src="images/im15.jpg"></div>
+            <div id="image37"><img src="images/im17.jpg"></div>
+            <div id="image36"><img src="images/im16.jpg"></div>
+            <div id="image31"><img src="images/im11.jpg"></div>
+            <div id="image34"><img src="images/im14.jpg"></div>
         </div>
     </div>
 
@@ -192,7 +194,7 @@
     </div>
     
     <div class="navbar4">
-        <img id="amazonlogo" src="amazon.logo1.png">
+        <img id="amazonlogo" src="images/amazon.logo1.png">
         <select id="options1">
             <option>
                 <div id="countrysel">
@@ -208,7 +210,7 @@
         <div id="currency">$ USD - U.S. Dollar</div>
         <div id="country">
             <div>
-                <img id="image5" src="american_flag.jpeg">
+                <img id="image5" src="images/american_flag.jpeg">
             </div>
             <p id="text22">United States</p>
         </div>
